# LaLaland

./: .env.example  .gitignore  AGENTS.md  AUTONOMOUS_AGENT_ARMY.md  README.md  agents-integrators.yml  agents.yml  docker-compose.yml  main.py  pyproject.toml  python -m venv venv  requirements.txt  voice-control.sh
.cursor/skills/cloud-agent-starter/: SKILL.md
api/: main.py
argilla_integration/: __init__.py  datasets.py
config/: __init__.py  settings.py  sources.yaml
docs/: CLAUDE_BLENDER_UNIFIED_PLATFORM.md  IMPLEMENTATION_ROADMAP.md  MAMAAI_ARCHITECTURE_BLUEPRINT.md  drive_enhancement_scan.md
orchestrator/: __init__.py  pipeline.py  tasks.py
processors/: __init__.py  processor.py
proposed_fixes/: README.md  pr1_runtime_warnings_fixes.patch  pr2_skill_command_fixes.patch
scrapers/: __init__.py  base.py  filesystem_scraper.py  github_scraper.py
scripts/: drive_enhancement_scan.py
src/: claude_orchestrator.py
storage/: vector_store.py
tests/: test_api.py  test_processor.py  test_scrapers.py  test_vector_store.py
ui/: dashboard.py
