[project]
name = "project-recovery-system"
version = "1.0.0"
description = "Self-sustaining system for recovering and organizing lost project data"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
